添加代理地址

--- a/micro-service-article/micro-service-article-staging.yml
+++ b/micro-service-article/micro-service-article-staging.yml
@@ -229,3 +229,8 @@ application:
   admin:
     quartz:                           ### 是否开启后台管理的调度中心
       enable: false
+mifan:
+  proxy:
+    isUse: true
+    server: 10.31.236.67
+    port: 3128
