添加汇率更新任务开关

--- a/micro-service-article/micro-service-article-production.yml
+++ b/micro-service-article/micro-service-article-production.yml
@@ -223,6 +223,7 @@ application:
         print: true
       history:
         cache: true
+      exchange-rate:true
   rest:
     support:
       host: static.mifanxing.com
