汇率更新开关

--- a/micro-service-article/micro-service-article-staging.yml
+++ b/micro-service-article/micro-service-article-staging.yml
@@ -216,6 +216,7 @@ application:
   scheduler:
     enable:
       index: false
+      exchange-rate:false
       translation: false
       update:
         timer: false
