--- a/micro-service-article/micro-service-article-development.yml
+++ b/micro-service-article/micro-service-article-development.yml
@@ -205,6 +205,7 @@ application:
   scheduler:
     enable:
       index: true
+      exchange-rate: true
       translation: false
       update:
         timer: false
