--- a/micro-service-zuul-gateway/micro-service-zuul-gateway-production.yml
+++ b/micro-service-zuul-gateway/micro-service-zuul-gateway-production.yml
@@ -18,6 +18,14 @@ spring:
   output:
     ansi:
       enabled: always
+  http:
+    multipart:
+      enabled: true
+      file-size-threshold: 0
+      location:
+      max-file-size: 10MB
+      max-request-size: 10MB
+      resolve-lazily: false
 
 ###########################
 ### SECURITY PROPERTIES ###
