--- a/micro-service-article/micro-service-article-development.yml
+++ b/micro-service-article/micro-service-article-development.yml
@@ -207,6 +207,7 @@ application:
       index: true
       exchange-rate: true
       translation: false
+      mail: false
       update:
         timer: false
       water:
