--- a/micro-service-article/micro-service-article-staging.yml
+++ b/micro-service-article/micro-service-article-staging.yml
@@ -218,6 +218,7 @@ application:
       index: false
       exchange-rate: false
       translation: false
+      mail: false
       update:
         timer: false
       water:
