--- a/micro-service-wxrank/micro-service-wxrank-development.yml
+++ b/micro-service-wxrank/micro-service-wxrank-development.yml
@@ -157,14 +157,7 @@ application:
     baseUrl: http://static.budee.com/yyren/image/
   scheduler:
     enable:
-      index: true
-      translation: false
-      update:
-        timer: false
-      water:
-        print: false
-      history:
-        cache: false
+      rank: true
   rest:
     support:
       host: 192.168.1.248
