--- a/micro-service-wxrank/micro-service-wxrank-development.yml
+++ b/micro-service-wxrank/micro-service-wxrank-development.yml
@@ -17,6 +17,9 @@ server:
   port: 8198
   session:
     timeout: 28800
+ribbon:
+  readtimeout: 300000
+  connecttimeout: 60000
 
 ##############
 ### SPRING ###
