修改文件系统

--- a/micro-service-article/micro-service-article-development.yml
+++ b/micro-service-article/micro-service-article-development.yml
@@ -202,7 +202,8 @@ moon:
 ##########################
 application:
   image:
-    baseUrl: http://static.budee.com/yyren/image/
+    baseUrl: //static.mifanxing.com/yyren/image/
+    mpUrl： //static.mifanxing.com/91yp/
   scheduler:
     enable:
       index: true
