--- a/micro-service-article/micro-service-article-development.yml
+++ b/micro-service-article/micro-service-article-development.yml
@@ -202,7 +202,7 @@ moon:
 ##########################
 application:
   image:
-    baseUrl: //static.mifanxing.com/yyren/image/
+    baseUrl: //static.mifanxing.com/article/image/
     mpUrl： //static.mifanxing.com/91yp/
   scheduler:
     enable:
