--- a/micro-service-article/micro-service-article-development.yml
+++ b/micro-service-article/micro-service-article-development.yml
@@ -203,7 +203,7 @@ moon:
 application:
   image:
     baseUrl: //static.mifanxing.com/article/image/
-    mpUrl： //static.mifanxing.com/91yp/
+    mpUrl: //static.mifanxing.com/91yp/
   scheduler:
     enable:
       index: true
