更新图片上传路径

--- a/micro-service-wxrank/micro-service-wxrank-development.yml
+++ b/micro-service-wxrank/micro-service-wxrank-development.yml
@@ -184,7 +184,7 @@ moon:
 ##########################
 application:
   image:
-    baseUrl: http://static.budee.com/yyren/wx/image/
+    baseUrl: //static.mifanxing.com/wx/image/
   scheduler:
     enable:
       rank: true
