添加地区定时任务开关

--- a/micro-service-wxrank/micro-service-wxrank-production.yml
+++ b/micro-service-wxrank/micro-service-wxrank-production.yml
@@ -198,6 +198,7 @@ application:
   scheduler:
     enable:
       rank: true
+      region: true
   rest:
     support:
       host: static.mifanxing.com
