--- a/micro-service-wxrank/micro-service-wxrank-development.yml
+++ b/micro-service-wxrank/micro-service-wxrank-development.yml
@@ -188,6 +188,7 @@ application:
       rank: true
       region: true
       segment: true
+      index: true
   rest:
     support:
       host: 192.168.1.248
