--- a/micro-service-wxrank/micro-service-wxrank-development.yml
+++ b/micro-service-wxrank/micro-service-wxrank-development.yml
@@ -191,6 +191,7 @@ application:
       region: true
       segment: true
       index: true
+      simliar: true
   rest:
     support:
       host: 192.168.1.248
