添加去重结果聚合定时任务开关

--- a/micro-service-wxrank/micro-service-wxrank-production.yml
+++ b/micro-service-wxrank/micro-service-wxrank-production.yml
@@ -203,6 +203,7 @@ application:
       region: true
       segment: true
       index: true
+      simliar: true
   rest:
     support:
       host: static.mifanxing.com
