--- a/micro-service-wxrank/micro-service-wxrank-development.yml
+++ b/micro-service-wxrank/micro-service-wxrank-development.yml
@@ -88,6 +88,8 @@ spring:
   output:
     ansi:
       enabled: always
+  thymeleaf:
+    cache: false
 
 ###########################
 ### SECURITY PROPERTIES ###
