--- a/micro-service-wxrank/micro-service-wxrank-production.yml
+++ b/micro-service-wxrank/micro-service-wxrank-production.yml
@@ -100,6 +100,9 @@ spring:
   output:
     ansi:
       enabled: always
+  thymeleaf:
+    cache: false
+    mode: LEGACYHTML5
 
 ###########################
 ### SECURITY PROPERTIES ###
