--- a/micro-service-article/micro-service-article-development.yml
+++ b/micro-service-article/micro-service-article-development.yml
@@ -183,6 +183,9 @@ moon:
       # Text queue, Classification, Clustering
       analyzer-exchange: server.data.direct.analyzer.exchange
       analyzer-queue: server.data.direct.analyzer.queue
+      # nlp queue
+      nlp-exchange: article.data.direct.nlp.exchange
+      nlp-queue: article.data.direct.articlenlp.queue
   jsch:
     host: 192.168.1.248
     port: 22
