添加send定时任务开关

--- a/micro-service-article/micro-service-article-development.yml
+++ b/micro-service-article/micro-service-article-development.yml
@@ -219,6 +219,8 @@ application:
         print: false
       history:
         cache: false
+      send: 
+        topic: true
   rest:
     support:
       host: 192.168.1.248
