添加定时发送开关

--- a/micro-service-article/micro-service-article-production.yml
+++ b/micro-service-article/micro-service-article-production.yml
@@ -226,6 +226,8 @@ application:
         print: true
       history:
         cache: true
+      send:
+        topic: true
   rest:
     support:
       host: static.mifanxing.com
