--- a/micro-service-article/micro-service-article-test.yml
+++ b/micro-service-article/micro-service-article-test.yml
@@ -183,6 +183,9 @@ moon:
       # Text queue, Classification, Clustering
       analyzer-exchange: server.data.direct.analyzer.exchange
       analyzer-queue: server.data.direct.analyzer.queue
+      # nlp queue
+      nlp-exchange: article.data.direct.nlp.exchange
+      nlp-queue: article.data.direct.nlp.queue
   jsch:
     host: 192.168.1.248
     port: 22
@@ -216,6 +219,8 @@ application:
         print: false
       history:
         cache: false
+      send:
+        topic: true
   rest:
     support:
       host: 192.168.1.248
