--- a/micro-service-zuul-gateway/micro-service-zuul-gateway-production.yml
+++ b/micro-service-zuul-gateway/micro-service-zuul-gateway-production.yml
@@ -45,7 +45,13 @@ logging:
     root: INFO
     org.springframework.cloud: INFO
     org.springframework.boot: INFO
-
+############
+##Actuator##
+############
+management:
+  endpoint:
+    health:
+      show-details: always
 ############
 ### ZUUL ###
 ############
