--- a/micro-service-wxrank/micro-service-wxrank-development.yml
+++ b/micro-service-wxrank/micro-service-wxrank-development.yml
@@ -20,6 +20,11 @@ ribbon:
   readtimeout: 300000
   connecttimeout: 60000
 
+management:
+  endpoint:
+    health:
+      show-details: always
+
 ##############
 ### SPRING ###
 ##############
