--- a/micro-service-article/micro-service-article-test.yml
+++ b/micro-service-article/micro-service-article-test.yml
@@ -220,7 +220,7 @@ application:
       history:
         cache: false
       send:
-        topic: true
+        topic: false
   rest:
     support:
       host: 192.168.1.248
