添加eventlog队列配置

--- a/micro-service-support/micro-service-support-development.yml
+++ b/micro-service-support/micro-service-support-development.yml
@@ -152,3 +152,11 @@ moon:
 ##########################
 ### APPLICATION CONFIG ###
 ##########################
+mifan:
+  amqp:
+    rabbit:
+      exchange: support.exchange
+      eventlog:
+        queue: support.eventlog.queue
+          max-length: 100000
+        routingkey: event.log.#
