--- a/micro-service-zuul-gateway/micro-service-zuul-gateway-development.yml
+++ b/micro-service-zuul-gateway/micro-service-zuul-gateway-development.yml
@@ -83,6 +83,10 @@ zuul:
       path: /wxrank/**
       serviceId: micro-service-wxrank
       sensitiveHeaders:
+    route-shop:
+      path: /shop/**
+      serviceId: micro-service-shop
+      sensitiveHeaders:
 
 # http://cloud.spring.io/spring-cloud-static/Edgware.RELEASE/single/spring-cloud.html#_uploading_files_through_zuul
 # https://github.com/Netflix/Hystrix/wiki/Configuration#execution.isolation.thread.timeoutInMilliseconds
