--- a/micro-service-zuul-gateway/micro-service-zuul-gateway-development.yml
+++ b/micro-service-zuul-gateway/micro-service-zuul-gateway-development.yml
@@ -132,7 +132,11 @@ hystrix:
         isolation:
           thread:
             timeoutInMilliseconds: 60000
-
+    micro-service-shop:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 60000
 ribbon:
   ConnectTimeout: 3000
   ReadTimeout: 60000
