--- a/micro-service-article/micro-service-article-production.yml
+++ b/micro-service-article/micro-service-article-production.yml
@@ -196,6 +196,9 @@ moon:
       # nlp queue
       nlp-exchange: article.data.direct.nlp.exchange
       nlp-queue: article.data.direct.nlp.queue
+      # nlp instruction queue
+      nlp-instruction-exchange: article.instruction.direct.nlp.exchange
+      nlp-instruction-queue: article.instruction.direct.nlp.queue
   jsch:
     host: 10.31.236.67
     port: 22
