--- a/micro-service-shop/micro-service-shop-development.yml
+++ b/micro-service-shop/micro-service-shop-development.yml
@@ -191,6 +191,7 @@ application:
       segment: true
       index: true
       simliar: true
+      exchange-rate: true
   rest:
     support:
       host: 192.168.1.248
