--- a/micro-service-article/micro-service-article-staging.yml
+++ b/micro-service-article/micro-service-article-staging.yml
@@ -99,7 +99,7 @@ spring:
     host: 10.31.40.4
     port: 6379
     database: 0
-    timeout: 0
+    timeout: 5000ms
     pool:
       max-active: 800
       max-wait: 60000
