--- a/micro-service-user/micro-service-user-production.yml
+++ b/micro-service-user/micro-service-user-production.yml
@@ -77,7 +77,7 @@ spring:
     host: 10.31.40.4
     port: 6379
     database: 0
-    timeout: 5000ms
+    timeout: 5000
     pool:
       max-active: 800
       max-wait: 60000
