--- a/micro-service-wxrank/micro-service-wxrank-development.yml
+++ b/micro-service-wxrank/micro-service-wxrank-development.yml
@@ -109,8 +109,8 @@ security:
 logging:
   path: D:\nlp\wxrank_log
   level:
-    root: INFO
-    org.hibernate: INFO                                       # 配置日志级别，让hibernate打印出执行的SQL
+    root: debug
+    org.hibernate: debug                                       # 配置日志级别，让hibernate打印出执行的SQL
     org.springframework.web: INFO
     org.hibernate.type.descriptor.sql.BasicBinder: INFO
     org.hibernate.type.descriptor.sql.BasicExtractor: INFO
