--- a/micro-service-wxrank/micro-service-wxrank-development.yml
+++ b/micro-service-wxrank/micro-service-wxrank-development.yml
@@ -110,7 +110,7 @@ logging:
   path: D:\nlp\wxrank_log
   level:
     root: INFO
-    org.hibernate: debug                                       # 配置日志级别，让hibernate打印出执行的SQL
+    org.hibernate: INFO                                       # 配置日志级别，让hibernate打印出执行的SQL
     org.springframework.web: INFO
     org.hibernate.type.descriptor.sql.BasicBinder: INFO
     org.hibernate.type.descriptor.sql.BasicExtractor: INFO
